<resources>
    <string name="app_name">FinanceTracker</string>
    <string name="registration">Регистрация</string>
    <string name="email">"Почта"</string>
    <string name="name">"Имя"</string>
    <string name="surname">"Фамилия"</string>
    <string name="password">"Пароль"</string>
    <string name="createAccount">"Создать аккаунт"</string>
    <string name="alreadyUser">"Уже являетесь пользователем?"</string>
    <string name="signin">"Войти"</string>
    <string name="eightSymbols">"Не менее 8 символов"</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="wrongPassword">Неверный пароль</string>
    <string name="orRegistr">Или зарегистрируйтесь с помощью</string>
    <string name="haventAccount">У вас еще нет учётной записи?</string>
    <string name="Registrate">Зарегистрироваться</string>
    <string name="dashboard">Управление</string>
    <string name="budget">Бюджет</string>
    <string name="add">Добавить</string>
    <string name="advices">Советы</string>
    <string name="more">Ещё</string>->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newIncome">Новый доход</string>
    <string name="newExpence">Новые расходы</string>
    <string name="addOperation">Добавить операцию</string>
    <string name="Conectare">Подтвердить</string>
    <string name="car">КАР</string>
    <string name="cript">КРИП</string>
    <string name="nal">НАЛ</string>
    <string name="fromScore">Со счета</string>
    <string name="fromCategory">Из категории</string>
    <string name="rub">RUB</string>
    <string name="nickname">Пример никнейма</string>
    <string name="testEmail">exampleEmail@gmail.com</string>
    <string name="cont">Счета</string>
    <string name="income">Доход</string>
    <string name="help">Помощь</string>
    <string name="settings">Настройки</string>
    <string name="transactionName">Имя транзакции</string>
    <string name="amount">Сумма</string>
    <string name="dash">Панель управления</string>
    <string name="entBalance">Общий баланс</string>
    <string name="generalBalance">Общий баланс:</string>
    <string name="exampleBalance">0 RUB</string>
    <string name="card">Карта:</string>
    <string name="cash">Наличные:</string>
    <string name="operations">Операции</string>
    <string name="aims">Цели</string>
    <string name="showAll">Посмотреть все</string>
    <string name="cashWithoutDot">Наличные</string>
    <string name="cardWithoutDot">Картой</string>
    <string name="balance">Баланс</string>
    <string name="monthbalance">Баланс за месяц</string>
    <string name="tructureofexpencess">Структура расходов</string>
    <string name="reference">Сравнение между периодами</string>
    <string name="bills">Счета</string>
    <string name="bankBills">Банковские счета</string>
    <string name="addNewCard">Добавить новую карту</string>
    <string name="cardNumber">Номер карты</string>
    <string name="cardName">Название карты</string>
    <string name="accept">Подтвердить</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="hintForCardNumber">Введите 16-значный номер карты</string>
    <string name="hintForCardName">Введите имя карты</string>
    <string name="hintForCardBalance">Введите баланс карты</string>
    <string name="addNewCash">Добавить новые наличные</string>
    <string name="hintCashName">Введите имя наличных</string>
    <string name="hintCashBalance">Введите баланс наличных</string>
    <string name="description">Описание</string>
    <string name="hintCashDescription">Введите описание наличных</string>
    <string name="cardOperations">Карточные операции</string>
    <string name="hintForSearch">Напишите имя транзакции</string>
    <string name="cardDetail">Счет карты</string>
    <string name="cardTransactions">Транзакции на этой карте</string>
    <string name="cashTransactions">Транзакции на этих наличных</string>
    <string name="bill">Счет</string>
    <string name="category">Категория</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="changeTheme">Сменить тему:</string>
    <string name="cardAdded">Ваша карта успешно добавлена!</string>
    <string name="cardError">Ваша карта не добавлена, пожалуйста, перепроверьте всю информацию, которую вы ввели</string>
    <string name="allInformation">Пожалуйста, введите всю информацию</string>
    <string name="cashAdded">Ваш наличный счет успешно добавлен!</string>
    <string name="financeAdvices">Финансовые советы</string>
    <string name="link">Ссылка</string>
    <string name="supporting">Данное приложение разработано на языке Kotlin Разрабатывали данное приложение: Студент Свирин Егор Алексеевич Студент Семенихин Константин Вячеславович Если возникли какие-то проблемы с работой сервиса, просьба, обратится по следующей почте: egorsvirinhh@gmail.com</string>
</resources>