<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_manage"
        android:title="@string/dashboard"
        android:icon="@drawable/icon_dashboard" />
    <item
        android:id="@+id/navigation_budget"
        android:title="@string/budget"
        android:icon="@drawable/icon_buget" />
    <item
        android:id="@+id/navigation_add"
        android:title="@string/add"
        android:icon="@drawable/icon_adauga" />
    <item
        android:id="@+id/navigation_advice"
        android:title="@string/advices"
        android:icon="@drawable/icon_educatie"
        android:visible="true"/>
    <item
        android:id="@+id/navigation_more"
        android:title="@string/more"
        android:icon="@drawable/icon_more" />
</menu>