<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddCardFragment"
    style="@style/mainBackground">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/arrow_left"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:backgroundTint="@color/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/addNewCard"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCardName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardName"
        android:textSize="16sp"
        style="@style/hintColor"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editCardName"
        style="@style/editText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:hint="@string/hintForCardName"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCardName" />

    <TextView
        android:id="@+id/textCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cardNumber"
        style="@style/hintColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCardName" />

    <EditText
        android:id="@+id/editCardNumber"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="35dp"
        android:textSize="16sp"
        android:inputType="number"
        style="@style/editText"
        android:hint="@string/hintForCardNumber"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCardNumber" />


    <TextView
        android:id="@+id/textCardBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/balance"
        style="@style/hintColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCardNumber" />

    <EditText
        android:id="@+id/editCardBalance"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        style="@style/editText"
        android:paddingStart="10dp"
        android:hint="@string/hintForCardBalance"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCardBalance" />

    <TextView
        android:id="@+id/textCardDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        android:fontFamily="@font/roboto_medium"
        android:text="Годен до"
        style="@style/hintColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCardBalance" />

    <EditText
        android:id="@+id/editCardMonth"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        style="@style/editText"
        android:paddingStart="10dp"
        android:hint="@string/month"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCardDate" />

    <EditText
        android:id="@+id/editCardYear"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        style="@style/editText"
        android:paddingStart="10dp"
        android:hint="@string/year"
        android:inputType="number"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/editCardMonth"
        app:layout_constraintTop_toBottomOf="@+id/textCardDate" />

    <Button
        android:id="@+id/buttonAddCard"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/accept"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCardYear" />


</androidx.constraintlayout.widget.ConstraintLayout>
