<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AddCashFragment"
    style="@style/mainBackground">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/arrow_left"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:backgroundTint="@color/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/addNewCash"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/roboto_medium"
        android:text="Название наличных"
        style="@style/hintColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editCashName"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:hint="@string/hintCashName"
        android:gravity="center"
        style="@style/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/balance"
        style="@style/hintColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCashName" />

    <EditText
        android:id="@+id/editCashBalance"
        android:layout_width="340dp"
        android:layout_height="50dp"
        style="@style/editText"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:hint="@string/hintCashBalance"
        android:inputType="number"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/description"
        style="@style/hintColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCashBalance" />

    <EditText
        android:id="@+id/editCashDescription"
        android:layout_width="340dp"
        android:layout_height="50dp"
        style="@style/editText"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:hint="@string/hintCashDescription"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/buttonAddCash"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/accept"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCashDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>
