<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".fragments.SingUpFragment">


    <TextView
        android:id="@+id/textRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:fontFamily="@font/roboto_medium"
        android:textSize="32dp"
        android:textColor="@color/black"
        android:layout_marginTop="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/email"
        android:textColor="@color/hintColor"
        android:textSize="14dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="300dp"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegistration" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="310dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/name"
        android:textColor="@color/hintColor"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="190dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <TextView
        android:id="@+id/textSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textSize="14dp"
        android:textColor="@color/hintColor"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/editSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textName" />

    <EditText
        android:id="@+id/editSurname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintStart_toEndOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/password"
        android:textColor="@color/hintColor"
        android:textSize="14dp"

        android:layout_marginBottom="5dp"
        android:layout_marginRight="290dp"
        app:layout_constraintBottom_toTopOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/editPassword"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="28dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <ImageButton
        android:id="@+id/buttonDisclose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_solid_eye_off"
        android:background="@color/white"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toTopOf="@+id/editPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eightSymbols"
        android:textColor="@color/error"
        android:fontFamily="@font/roboto_medium"
        android:textSize="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="215dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:text="@string/createAccount"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/alreadyUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/alreadyUser"
        android:textColor="@color/hintColor"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="24dp"
        android:textColor="@color/buttonColor"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alreadyUser" />

</androidx.constraintlayout.widget.ConstraintLayout>