<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/backgroundToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/avatar_svgrepo_com"
        android:layout_marginRight="242dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar">

        <TextView
            android:id="@+id/nickname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="210dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/testEmail"
            android:textSize="16dp"
            android:textColor="@color/hintColor"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="36dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/backgroundToolbar"
            android:src="@drawable/arrow_right" />
    </FrameLayout>

    <ImageView
        android:id="@+id/imageCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_cont"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cont"
        android:textSize="18dp"
        android:layout_marginTop="51.5dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageCont"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/imageIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/icon_venituri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCont" />

    <TextView
        android:id="@+id/textIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income"
        android:textSize="18dp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="51dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageIncome"
        app:layout_constraintTop_toBottomOf="@+id/textCont" />

    <ImageView
        android:id="@+id/imageHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_ajutor"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageIncome" />

    <TextView
        android:id="@+id/textHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textSize="18dp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageHelp"
        app:layout_constraintTop_toBottomOf="@+id/textIncome" />

    <ImageView
        android:id="@+id/imageSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_setari"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHelp" />

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="18dp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageSettings"
        app:layout_constraintTop_toBottomOf="@+id/textHelp" />



</androidx.constraintlayout.widget.ConstraintLayout>