<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/mainBackground"
    tools:context=".ui.fragments.SettingsFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/imageBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/arrow_left"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:backgroundTint="@color/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="39dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintStart_toEndOf="@+id/imageBack"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icomoon_free_exit"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/logout"
        android:textSize="18dp"
        style="@style/hintColor"
        android:layout_marginTop="53dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageLogout"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <TextView
        android:id="@+id/textChangeTheme"
        style="@style/hintColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="55dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/changeTheme"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogout" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintStart_toEndOf="@+id/textChangeTheme"
        app:layout_constraintTop_toBottomOf="@+id/textLogout" />


</androidx.constraintlayout.widget.ConstraintLayout>